--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -39,23 +39,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
+
     <Button
         android:id="@+id/toSecondFragment"
-        android:layout_width="84dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="269dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="200dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="-150dp"
-        android:text="Next"
+        android:layout_marginBottom="-280dp"
         android:backgroundTint="#73C2F0"
-        android:translationY="-300dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Next"
+        android:translationY="-50dp"
+        app:layout_constraintTop_toBottomOf="@id/toHomePage"
         app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent" />
-
-
 
     <Switch
         android:id="@+id/switch2"
@@ -66,6 +64,8 @@
         android:layout_marginBottom="20dp"
         android:text="Move out of zone?"
         android:textSize="26dp"
+        android:trackTintMode="src_over"
+        android:thumbTintMode="src_in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pop"
@@ -117,7 +117,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
-    
+
     <ImageView
         android:id="@+id/pop"
         android:layout_width="wrap_content"
@@ -156,17 +156,15 @@
 
     <Button
         android:id="@+id/toHomePage"
-        android:layout_width="112dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="-50dp"
-        android:text="Previous"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="113dp"
+        android:layout_marginEnd="50dp"
         android:backgroundTint="#73C2F0"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Previous"
+        app:layout_constraintEnd_toStartOf="@+id/toSecondFragment"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/toSecondFragment"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/numNotesInAmp" />
 
     <Button
         android:id="@+id/plusSpeaker"
@@ -217,5 +215,26 @@
         app:cornerRadius="100dp"
         app:layout_constraintEnd_toStartOf="@+id/numNotesInAmp"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <ImageView
+        android:id="@+id/SPEAKER"
+        android:layout_width="127dp"
+        android:layout_height="124dp"
+        app:srcCompat="@drawable/speaker"
+        android:layout_marginStart="25dp"
+        app:layout_constraintStart_toEndOf="@+id/plusSpeaker"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        tools:layout_editor_absoluteX="248dp"
+        tools:layout_editor_absoluteY="284dp" />
+    <ImageView
+        android:id="@+id/AMP"
+        android:layout_width="127dp"
+        android:layout_height="124dp"
+        app:srcCompat="@drawable/amp"
+        android:layout_marginStart="25dp"
+        app:layout_constraintStart_toEndOf="@+id/plusAmp"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        tools:layout_editor_absoluteX="248dp"
+        tools:layout_editor_absoluteY="284dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
