--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -16,83 +16,61 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="220dp"
         android:layout_marginBottom="16dp"
-        android:text="Number of notes in Speaker"
+        android:layout_marginTop="50dp"
+        android:text="Notes in Speaker"
+        android:textSize="26dp"
         app:layout_constraintBottom_toTopOf="@+id/numNotes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch3" />
+        app:layout_constraintTop_toBottomOf="@+id/switch2" />
 
-    <EditText
+    <TextView
         android:id="@+id/numNotes"
-        android:layout_width="120dp"
-        android:layout_height="57dp"
+        android:layout_width="95dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="225dp"
-        android:layout_marginBottom="27dp"
-        android:ems="10"
-        android:inputType="number"
-        app:boxBackgroundMode="filled"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        android:text="0"
+        android:textAlignment="center"
+        android:textSize="26dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
+
     <Button
         android:id="@+id/toSecondFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="269dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="200dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginBottom="-280dp"
+        android:backgroundTint="#73C2F0"
         android:text="Next"
-        android:translationY="-300dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:translationY="-50dp"
+        app:layout_constraintTop_toBottomOf="@id/toHomePage"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="228dp"
-        android:layout_marginBottom="17dp"
-        android:text="Working Auto?"
-        app:layout_constraintBottom_toTopOf="@+id/switch2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pop"
-        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <Switch
         android:id="@+id/switch2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="134dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="110dp"
         android:layout_marginBottom="20dp"
-        android:text="Did robot move out of zone?"
-        app:layout_constraintBottom_toTopOf="@+id/switch3"
+        android:text="Move out of zone?"
+        android:textSize="26dp"
+        android:trackTintMode="src_over"
+        android:thumbTintMode="src_in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch1"
+        app:layout_constraintTop_toBottomOf="@+id/pop"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
-    <Switch
-        android:id="@+id/switch3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="180dp"
-        android:layout_marginBottom="21dp"
-        android:text="Did the robot score ?"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch2"
-        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <TextView
         android:id="@+id/textView4"
@@ -113,27 +91,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="-75dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="170dp"
         android:layout_marginEnd="128dp"
         android:layout_marginBottom="2dp"
-        android:text="Number of notes in Amp"
+        android:text="Notes in Amp"
+        android:textSize="26dp"
         app:layout_constraintBottom_toTopOf="@+id/numNotesInAmp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
-        android:id="@+id/numNotesInAmp"
-        android:layout_width="120dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="228dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
+
+    <TextView
+        android:id="@+id/numNotesInAmp"
+        android:layout_width="92dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="225dp"
+        android:text="0"
+        android:textAlignment="center"
+        android:textSize="26dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <ImageView
         android:id="@+id/pop"
@@ -143,7 +126,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="9dp"
         android:layout_marginBottom="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/switch1"
+
         app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -165,6 +148,7 @@
         android:layout_marginEnd="106dp"
         android:layout_marginBottom="71dp"
         android:text=""
+        android:textSize="26dp"
         app:layout_constraintBottom_toTopOf="@+id/switch2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/pop"
@@ -172,13 +156,85 @@
 
     <Button
         android:id="@+id/toHomePage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
-        android:layout_marginBottom="228dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="113dp"
+        android:layout_marginEnd="50dp"
+        android:backgroundTint="#73C2F0"
         android:text="Previous"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView6" />
+        app:layout_constraintEnd_toStartOf="@+id/toSecondFragment"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintTop_toBottomOf="@+id/numNotesInAmp" />
 
+    <Button
+        android:id="@+id/plusSpeaker"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="#73C2F0"
+        android:text="+"
+        android:textSize="26dp"
+        app:cornerRadius="100dp"
+        app:layout_constraintStart_toEndOf="@+id/numNotes"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <Button
+        android:id="@+id/minusSpeaker"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="#73C2F0"
+        android:text="-"
+        android:textSize="26dp"
+        app:cornerRadius="100dp"
+        app:layout_constraintEnd_toStartOf="@+id/numNotes"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <Button
+        android:id="@+id/plusAmp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#73C2F0"
+        android:text="+"
+        android:textSize="26dp"
+        app:cornerRadius="100dp"
+        app:layout_constraintStart_toEndOf="@+id/numNotesInAmp"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+    <Button
+        android:id="@+id/minusAmp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#73C2F0"
+        android:text="-"
+        android:textSize="26dp"
+        app:cornerRadius="100dp"
+        app:layout_constraintEnd_toStartOf="@+id/numNotesInAmp"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <ImageView
+        android:id="@+id/SPEAKER"
+        android:layout_width="127dp"
+        android:layout_height="124dp"
+        app:srcCompat="@drawable/speaker"
+        android:layout_marginStart="25dp"
+        app:layout_constraintStart_toEndOf="@+id/plusSpeaker"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        tools:layout_editor_absoluteX="248dp"
+        tools:layout_editor_absoluteY="284dp" />
+    <ImageView
+        android:id="@+id/AMP"
+        android:layout_width="127dp"
+        android:layout_height="124dp"
+        app:srcCompat="@drawable/amp"
+        android:layout_marginStart="25dp"
+        app:layout_constraintStart_toEndOf="@+id/plusAmp"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        tools:layout_editor_absoluteX="248dp"
+        tools:layout_editor_absoluteY="284dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
