--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -30,31 +30,7 @@
                 android:textSize="35sp"
                 android:padding="5dp"
                 tools:ignore="HardcodedText" />
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/Working_auto"
-                    android:layout_width="112dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="Working Auto"
-                    android:textColor="@color/white"
-                    android:textSize="30sp"
-                    tools:ignore="HardcodedText,RtlHardcoded" />
-
-                <TextView
-                    android:id="@+id/Working_auto_info"
-                    android:layout_width="230dp"
-                    android:layout_height="158dp"
-                    android:gravity="left"
-                    android:padding="40dp"
-                    android:text="This means that if the robot moved in the auto section, even just a centimeter."
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
-            </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
@@ -76,7 +52,9 @@
                     android:layout_width="230dp"
                     android:layout_height="match_parent"
                     android:gravity="left"
-                    android:padding="40dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="38dp"
+                    android:paddingLeft="17dp"
                     android:text="This means did it move past the red lines on the field."
                     android:textColor="@color/white"
                     android:textSize="16sp" />
@@ -106,7 +84,9 @@
                     android:layout_width="33dp"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:padding="40dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="38dp"
+                    android:paddingLeft="17dp"
                     android:text="You can see + and - click on + when they score a speaker in autonomous period"
                     android:textColor="@color/white"
                     android:textSize="15sp" />
@@ -132,7 +112,9 @@
                     android:layout_width="33dp"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:padding="35dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="38dp"
+                    android:paddingLeft="17dp"
                     android:text="This means how many notes were scored in the place on the side of the field, where you push in a note."
                     android:textColor="@color/white"
                     android:textSize="15sp" />
@@ -167,8 +149,10 @@
                     android:layout_width="150dp"
                     android:layout_height="match_parent"
                     android:gravity="left"
-                    android:padding="26dp"
-                    android:text="The wolf logo switches the backdrop, toggling between a white and black mode. "
+                    android:paddingRight="50dp"
+                    android:paddingTop="38dp"
+                    android:paddingLeft="17dp"
+                    android:text="The wolf logo switches the backdrop, toggling between a white and black mode while also playing a howling sound. "
                     android:textColor="@color/white"
                     android:textSize="15sp"
                     tools:ignore="HardcodedText,RtlHardcoded" />
@@ -190,7 +174,9 @@
                     android:layout_width="205dp"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:padding="26dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="17dp"
+                    android:paddingLeft="17dp"
                     android:text="When the switch is positioned to the left and lacks a purple color, the switch tells us that the statement is false. "
                     android:textColor="@color/white"
                     android:textSize="15sp"
@@ -215,7 +201,9 @@
                     android:text="When the switch is positioned to the right with a purple color, it tells us that that the statement is true."
                     android:textColor="@color/white"
                     android:textSize="15sp"
-                    android:padding="26dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="17dp"
+                    android:paddingLeft="17dp"
                     tools:ignore="HardcodedText,RtlHardcoded" />
             </TableRow>
 
@@ -239,7 +227,9 @@
                     android:layout_width="257dp"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:padding="26dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="26dp"
+                    android:paddingLeft="17dp"
                     android:text="Broke means the robot broke down and stopped working."
                     android:textColor="@color/white"
                     android:textSize="15sp"
@@ -266,40 +256,16 @@
                     android:layout_width="244dp"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:padding="26dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="26dp"
+                    android:paddingLeft="17dp"
                     android:text="Defense means that if the robot did any kind of defense to stop the other team from scoring or obtaining notes. "
                     android:textColor="@color/white"
                     android:textSize="15sp"
                     tools:ignore="HardcodedText,RtlHardcoded" />
             </TableRow>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/Ground"
-                    android:layout_width="181dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="Pick up from ground?"
-                    android:textColor="@color/white"
-                    android:textSize="30sp"
-                    tools:ignore="HardcodedText,RtlHardcoded" />
-
-                <TextView
-                    android:id="@+id/Ground_info"
-                    android:layout_width="207dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:padding="26dp"
-                    android:text="Pick up from the ground means that the robot has picked up notes from the ground. "
-                    android:textColor="@color/white"
-                    android:textSize="15sp"
-                    tools:ignore="HardcodedText,RtlHardcoded" />
-
-            </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
@@ -311,7 +277,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:padding="10dp"
-                    android:text="Pick up from source?"
+                    android:text="Intake Method?"
                     android:textColor="@color/white"
                     android:textSize="30sp"
                     tools:ignore="HardcodedText,RtlHardcoded" />
@@ -321,8 +287,10 @@
                     android:layout_width="205dp"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:padding="26dp"
-                    android:text="Pick up from the source means that the robot has picked up notes from the person handing them out for the wall. "
+                    android:paddingRight="50dp"
+                    android:paddingTop="26dp"
+                    android:paddingLeft="17dp"
+                    android:text="Intake method means whether if the robot picks up notes from the ground, obtains notes directly from source, or both. "
                     android:textColor="@color/white"
                     android:textSize="15sp"
                     tools:ignore="HardcodedText,RtlHardcoded" />
@@ -336,7 +304,7 @@
                     android:layout_width="150dp"
                     android:layout_height="125dp"
                     android:gravity="center"
-                    android:padding="10dp"
+                    android:padding="0dp"
                     android:text="Notes in Amp"
                     android:textColor="@color/white"
                     android:textSize="28sp"
@@ -345,10 +313,41 @@
                 <TextView
                     android:id="@+id/Amp_Pick_up_info"
                     android:layout_width="235dp"
+                    android:layout_height="match_parent"
+                    android:gravity="left"
+                    android:paddingLeft="17dp"
+                    android:paddingTop="26dp"
+                    android:paddingRight="50dp"
+                    android:text="Notes in Amp means if the robot scored in the Amp which is needed to amplify the speaker. "
+                    android:textColor="@color/white"
+                    android:textSize="15sp"
+                    tools:ignore="HardcodedText,RtlHardcoded" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/Note_in_Speaker"
+                    android:layout_width="14dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Notes in Speaker"
+                    android:textColor="@color/white"
+                    android:textSize="30sp"
+                    android:padding="10dp"
+                    tools:ignore="HardcodedText,RtlHardcoded" />
+
+                <TextView
+                    android:id="@+id/Note_in_Speaker_info"
+                    android:layout_width="202dp"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:padding="26dp"
-                    android:text="Notes in Amp means if the robot scored in the Amp which is needed to amplify the speaker. "
+                    android:paddingRight="50dp"
+                    android:paddingTop="26dp"
+                    android:paddingLeft="17dp"
+                    android:text="Notes in Speaker means scoring in the big structure in the middle. "
                     android:textColor="@color/white"
                     android:textSize="15sp"
                     tools:ignore="HardcodedText,RtlHardcoded" />
@@ -374,38 +373,15 @@
                     android:layout_width="259dp"
                     android:layout_height="151dp"
                     android:gravity="left"
-                    android:padding="26dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="26dp"
+                    android:paddingLeft="17dp"
                     android:text="If the robot missed a note to a speaker or amp during teleop, press the + button. "
                     android:textColor="@color/white"
                     android:textSize="15sp"
                     tools:ignore="HardcodedText,RtlHardcoded" />
             </TableRow>
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/Note_in_Speaker"
-                    android:layout_width="14dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Notes in Speaker"
-                    android:textColor="@color/white"
-                    android:textSize="30sp"
-                    android:padding="10dp"
-                    tools:ignore="HardcodedText,RtlHardcoded" />
-
-                <TextView
-                    android:id="@+id/Note_in_Speaker_info"
-                    android:layout_width="202dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:padding="26dp"
-                    android:text="Notes in Speaker means scoring in the big structure in the middle. "
-                    android:textColor="@color/white"
-                    android:textSize="15sp"
-                    tools:ignore="HardcodedText,RtlHardcoded" />
-            </TableRow>
 
             <TextView
                 android:id="@+id/End_Game"
@@ -443,7 +419,9 @@
                     android:layout_width="246dp"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:padding="26dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="38dp"
+                    android:paddingLeft="17dp"
                     android:text="The chain status means whether if the robot (attempted) to climb the chain. "
                     android:textColor="@color/white"
                     android:textSize="15sp" />
@@ -469,7 +447,9 @@
                     android:layout_width="246dp"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:padding="26dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="26dp"
+                    android:paddingLeft="17dp"
                     android:text="The harmony status means whether if the robot (attempted) to climb a chain with other robots on it. "
                     android:textColor="@color/white"
                     android:textSize="15sp" />
@@ -495,7 +475,9 @@
                     android:layout_width="230dp"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:padding="26dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="26dp"
+                    android:paddingLeft="17dp"
                     android:text="The number of failed notes means the number of notes the robot attempted to put in the trap but got stuck or fell out. "
                     android:textColor="@color/white"
                     android:textSize="15sp" />
@@ -510,7 +492,7 @@
                     android:layout_width="180dp"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:padding="10dp"
+                    android:padding="0dp"
                     android:text="Notes in Trap\n(Success)"
                     android:textColor="@color/white"
                     android:textSize="30sp"
@@ -521,7 +503,9 @@
                     android:layout_width="230dp"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:padding="26dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="26dp"
+                    android:paddingLeft="17dp"
                     android:text="The number of successful notes means the number of notes the robot attempted to put in the trap and got it fully in. "
                     android:textColor="@color/white"
                     android:textSize="15sp" />
@@ -548,7 +532,9 @@
                     android:layout_width="230dp"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:padding="26dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="26dp"
+                    android:paddingLeft="17dp"
                     android:text="In the end, type any additional notes you have here with a character limit of 150. "
                     android:textColor="@color/white"
                     android:textSize="15sp" />
