--- a/app/src/main/res/layout/fragment_second2.xml
+++ b/app/src/main/res/layout/fragment_second2.xml
@@ -102,7 +102,7 @@
             android:id="@+id/notesStuck"
             android:layout_width="110dp"
             android:layout_height="wrap_content"
-            android:text="Notes in Trap (Failed)"
+            android:text="Notes in Trap (Missed)"
             android:textSize="26dp"
             android:translationX="30dp"
             android:translationY="290dp" />
@@ -180,7 +180,7 @@
             android:id="@+id/notesSuccess"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="Notes in Trap (Successful)"
+            android:text="Notes in Trap (Scored)"
             android:textSize="26dp"
             android:translationX="30dp"
             android:translationY="400dp" />
