--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -9,23 +9,61 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="730dp"
-        android:padding="0dp">
+        android:padding="0dp"
+        android:background="@drawable/red_light">
 
+
+
+        <Button
+            android:id="@+id/bg1"
+            android:layout_width="430dp"
+            android:layout_height="80dp"
+            android:backgroundTint="#E48B92"
+            android:text=""
+            android:clickable="false"
+            android:translationX="0dp"
+            android:translationY="655dp"
+            app:cornerRadius="15dp"/>
+        <Button
+            android:id="@+id/bg2"
+            android:layout_width="378dp"
+            android:layout_height="50dp"
+            android:backgroundTint="#5cffffff"
+            android:text=""
+            android:clickable="false"
+            android:translationX="17dp"
+            android:translationY="670dp"
+            app:cornerRadius="20dp"
+            android:tag=""/>
         <Button
             android:id="@+id/cont"
             android:layout_width="110dp"
-            android:layout_height="wrap_content"
-            android:text="Continue"
-            android:translationY="210dp"
-            android:translationX="290dp"/>
+            android:layout_height="50dp"
+            android:text="Next"
+            android:translationY="669.5dp"
+            android:translationX="285dp"
+            app:cornerRadius="20dp"
+            android:backgroundTint="#E02E3C"
+            android:textColor="@color/white"
+            android:shadowRadius="10"
+            android:shadowDy="5"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
+
         <Button
             android:id="@+id/back"
             android:layout_width="110dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:text="Info"
-            android:translationY="210dp"
-            android:translationX="10dp"/>
-
+            android:translationX="17dp"
+            android:translationY="669.5dp"
+            android:textColor="@color/white"
+            app:cornerRadius="20dp"
+            android:backgroundTint="#E02E3C"
+            android:shadowRadius="10"
+            android:shadowDy="5"
+            android:textSize="20dp"
+            android:textStyle="bold" />
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
@@ -33,7 +71,13 @@
             android:text="Team Selection"
             android:textSize="42dp"
             android:translationX="60dp"
-            android:translationY="50dp"/>
+            android:translationY="113dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:shadowDy="5"
+            android:shadowColor="@color/black"
+            android:shadowRadius="10"
+            android:tag="@string/no_change"/>
 
         <TextView
             android:id="@+id/location"
@@ -41,16 +85,24 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:text="Red 1"
-            android:textSize="42dp"
-            android:translationX="140dp"
-            android:translationY="110dp"/>
+            android:textSize="36dp"
+            android:textColor="#ff0000"
+            android:translationX="159dp"
+            android:translationY="669dp"
+            android:textStyle="bold"
+            android:shadowDy="5"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1" />
+
         <ImageView
             android:id="@+id/pop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:src="@drawable/pop"
-            android:translationY="380dp"
-            android:translationX="130dp"/>
+            android:translationX="155dp"
+            android:translationY="13dp"
+            android:tag=""
+        />
 
 
         <com.google.android.material.textfield.TextInputEditText
